--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         
                 <ul class="site-list">
                     <li class="site-element"><a class="site-link current" href="./index.html">Студия</a></li>
-                    <li class="site-element"><a class="site-links" href="./portfolio.html">Портфолио</a></li>
-                    <li class="site-element"><a class="site-links" href="/">Контакты</a></li>
+                    <li class="site-element"><a class="site-link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="site-element"><a class="site-link" href="/">Контакты</a></li>
                 </ul>
         
             </nav>
@@ -473,6 +473,10 @@
             refs.modal.classList.toggle("is-hidden");
         }
     })();
+    </script>
+    <script>
+        console.log(document.querySelector(".page-header")
+        .getBoundingClientRect().height);
     </script>
 
 </body>
